--- a/src/index.html
+++ b/src/index.html
@@ -1182,6 +1182,8 @@
         </div>
         <!-- نهاية قسم الماركات العالمية -->
 
+
+        <!-- تذييل الصفحة  -->
         <footer class="row">
             <div id="brand-logos" class="text-center">
                 <span>المتجر وكيل مُعتمد لكبرى الشركات العالمية</span>
