--- a/src/checkout.html
+++ b/src/checkout.html
@@ -57,8 +57,8 @@
                     </form>
                     <div class="collapse navbar-collapse"  id="navbarCollapse">
                         <ul class="navbar-nav ms-auto">
-                            <li class="nav-item active">
-                                <a href="#" class="nav-link" aria-current="page">الصفحة الرئيسية </a>
+                            <li class="nav-item">
+                                <a href="index.html" class="nav-link" aria-current="page">الصفحة الرئيسية </a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown2" role="button"
